@@ -1,6 +1,16 @@
 /examples/in_progress/ export-ignore
+/examples/hoare_logic/draft/ export-ignore
+/tests/ export-ignore
+/bench/encoding/ export-ignore
+/share/images/boomy/ export-ignore
+/share/images/boomy.rc export-ignore
+/share/javascript/ export-ignore
 /misc/ export-ignore
 /ROADMAP export-ignore
 /DEVELOPER.readme export-ignore
 /opam/ export-ignore
 .gitignore export-ignore
+.gitattributes export-ignore
+/check.sh export-ignore
+/.merlin.in export-ignore
+/TODO export-ignore
