@@ -38,6 +38,10 @@ Provers
   o support for Zenon 0.8.0 (released Oct 21, 2014)
   o support for Zenon_modulo 0.4.1 (released Jul 2, 2015)
 
+Distribution
+  o non-free files are distributed in an extra tar file: "boomy" icon set,
+    javascript helpers for "why3 session html --style jstree"
+
 Version 0.86.2, October 13, 2015
 ================================
 
